5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4477/executions/1575_1326.log
== TEST (2019-03-28 11:04:34) 
-- CODE:
print("40+35")
-- OUTPUT:
40+35
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 11:05:39) 
-- CODE:
var1 = 40 + 35
print("var1")
-- OUTPUT:
var1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 11:06:14) 
-- CODE:
var1 = 40 + 35
print("var1:)
-- ERROR:
File "XXXX", line 2
    print("var1:)
                ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 11:06:48) 
-- CODE:
var1 = 40 + 35
print (var1)
-- OUTPUT:
75
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 11:06:58) 
-- CODE:
var1 = 40 - 35
print (var1)
-- OUTPUT:
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 11:07:31) 
-- CODE:
var1 = 40 + 35
print (var1)
-- OUTPUT:
75
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 11:07:48) 
-- CODE:
var1 = 40 + 35
print (var1)
-- EXECUTION TIME:
0.151753
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
---- user output:
75
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 16:47:35) 
-- CODE:
# Variavel
Sosigenes = 40
Jocasta = 35
# Variavel soma
soma = Sosigenes + Jocasta
# Saida
print(soma)
-- OUTPUT:
75
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-27 16:47:42) 
-- CODE:
# Variavel
Sosigenes = 40
Jocasta = 35
# Variavel soma
soma = Sosigenes + Jocasta
# Saida
print(soma)
-- EXECUTION TIME:
0.213063
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
---- user output:
75
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-27 16:49:19) 
-- CODE:
# Variavel
Sosigenes = 40
Jocasta = 35
# Variavel soma
Soma = Sosigenes + Jocasta
# Saida
print(soma)
-- EXECUTION TIME:
0.196811
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1575/1326/main.py", line 7, in <module>
    print(soma)
NameError: name 'soma' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 16:49:20) 
-- CODE:
# Variavel
Sosigenes = 40
Jocasta = 35
# Variavel soma
Soma = Sosigenes + Jocasta
# Saida
print(soma)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(soma)
NameError: name 'soma' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-27 16:49:22) 
-- CODE:
# Variavel
Sosigenes = 40
Jocasta = 35
# Variavel soma
Soma = Sosigenes + Jocasta
# Saida
print(soma)
-- EXECUTION TIME:
0.19263
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1575/1326/main.py", line 7, in <module>
    print(soma)
NameError: name 'soma' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-27 16:49:27) 
-- CODE:
# Variavel
Sosigenes = 40
Jocasta = 35
# Variavel soma
Soma = Sosigenes + Jocasta
# Saida
print(Soma)
-- EXECUTION TIME:
0.143207
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
---- user output:
75
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
